--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,26 +1,65 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion "26.0.3"
+    compileSdkVersion 28
+    buildToolsVersion "28.0.3"
 
     defaultConfig {
-        applicationId "com.game.esc.onetofifty"
-        minSdkVersion 16
+        applicationId "com.tubug.game.one2fifty"
+        minSdkVersion 19
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
     }
+    signingConfigs {
+        myConfig {
+            storeFile file("../liuniu61_1.jks")
+            storePassword "oyqm150022"
+            keyAlias "liuniu"
+            keyPassword "oyqm150022"
+        }
+    }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.myConfig
+            resValue("string","admob_app_id","ca-app-pub-9827194367851134~2224524344")
+            resValue("string","banner_id","ca-app-pub-9827194367851134/7285279338")
+            resValue("string","interstitial_id","ca-app-pub-9827194367851134/7017739920")
+            resValue("string","reward_id","ca-app-pub-9827194367851134/7069090632")
+        }
+        debug {
+            signingConfig signingConfigs.myConfig
+            resValue("string","admob_app_id","ca-app-pub-3940256099942544~3347511713")
+            resValue("string","banner_id","ca-app-pub-3940256099942544/6300978111")
+            resValue("string","interstitial_id","ca-app-pub-3940256099942544/1033173712")
+            resValue("string","reward_id","ca-app-pub-3940256099942544/5224354917")
         }
     }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:26.1.0'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+//    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation 'androidx.appcompat:appcompat:1.1.0-alpha01'
+    implementation 'androidx.preference:preference:1.1.0-alpha02'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0-alpha01'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha3'
+    implementation 'com.google.android.material:material:1.1.0-alpha02'
+    implementation "androidx.paging:paging-runtime:2.1.0-rc01"
+    implementation 'com.beust:klaxon:3.0.1'
+
+
+//    implementation 'androidx.room:room-runtime:2.1.0-alpha03'
+//    kapt 'androidx.room:room-compiler:2.1.0-alpha03'
+
+//    implementation "androidx.lifecycle:lifecycle-extensions:2.1.0-alpha01"
+//    kapt "androidx.lifecycle:lifecycle-compiler:2.1.0-alpha01"
+
+    implementation 'com.android.support:multidex:1.0.3'
+    implementation("com.squareup.okhttp3:okhttp:4.1.0")
+//    implementation 'com.google.android.gms:play-services-ads:18.1.1'
 }
